samples/task/invalid/R15.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><p>This is not a step or stepsection.</p></steps>
  </taskbody>
</task>